@@ -1,5 +1,9 @@
 2008-08-25  Martin Maechler  <maechler@stat.math.ethz.ch>
 
+	* src/dgCMatrix.c (dgCMatrix_LU): partially revert change
+	r2175 (2008-04-23) and do give an error for a singular matrix.
+	* R/Auxiliaries.R (detSparseLU): adapt to that.
+
 	* R/LU.R: expand( <sparseLU> )
 
 	* NAMESPACE, man/all.equal-methods.Rd:
